apps/external/home-assistant/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-1
  namespace: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.27
    conditions:  # https://github.com/argoproj/argo-cd/issues/15554
      ready: true
ports:
  - name: http
    protocol: TCP
    port: 8123
