apps/external/home-assistant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ports:
    - name: http 
      protocol: TCP
      port: 80
      targetPort: 8123
