apps/external/home-assistant/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  parentRefs:
    - name: euclid
      namespace: gateway
  hostnames:
    - "haos.euclid.stonegarden.dev"
  rules:
    - backendRefs:
        - name: home-assistant
          port: 80
